# src/openklant/components/klantinteracties/api/schema.py
@@ -185,10 +185,9 @@ The registry configuration is as follows:
 
 | codeRegister  | codeObjecttype       | codeSoortObjectId                |
 |---------------|--------------------------|------------------------------|
-| brp           | natuurlijk_persoon       | bsn, overig                  |
-| hr            | niet_natuurlijk_persoon  | rsin, kvk_nummer, overig     |
-| hr            | vestiging                | vestigingsnummer, overig     |
-| overig        | –                        | –                            |
+| brp           | natuurlijk_persoon       | bsn,                         |
+| hr            | niet_natuurlijk_persoon  | rsin, kvk_nummer,            |
+| hr            | vestiging                | vestigingsnummer,            |
 
 
 
